<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#E5DBCF">

    <RelativeLayout
        android:id="@+id/linearLayoutBarraSuperior"
        android:layout_width="fill_parent"
        android:layout_height="40dp" 
        android:background="@drawable/fondo_naranja" 
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/twitterbird5" />

        <TextView
            android:id="@+id/txtBuscarAnuncios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/buscarAnuncios" 
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_marginLeft="65dp"/>  
            
        <ImageView
            android:id="@+id/btnPublicarAnuncio"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="260dp"
            android:src="@drawable/enviar_blanca" />                
                          
    </RelativeLayout>
    
    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:background="@drawable/customborder"
            android:layout_margin="15dp">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/txtTipoBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoBusqueda"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/cmbTipoBusqueda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipos"/>       
            
        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTitulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" >
            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/txtCiudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editCiudad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" >
        </EditText>

<!--         <CheckBox -->
<!--             android:id="@+id/chkLocalizacion" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:checked="true" -->
<!--             android:text="@string/usarLocalizacion" />    -->
            
        <CheckBox
            android:id="@+id/chkConLinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/conLinks" />
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|center_horizontal">

	        <Button
	            android:background="@drawable/borderbutton"
	            android:id="@+id/btnBuscar"
	            android:layout_width="120dp"
		        android:layout_height="40dp"
	            android:contentDescription="@string/buscar"
	            android:text="@string/busca"
	            android:textColor="#FFFFFF" 
	            android:drawableLeft="@drawable/buscar"/>

        </LinearLayout>
        
    </LinearLayout>

    </ScrollView>
</LinearLayout>