<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E5DBCF" >
    
    <RelativeLayout
        android:id="@+id/linearLayoutBarraSuperior"
        android:layout_width="fill_parent"
        android:layout_height="40dp" 
        android:background="@drawable/fondo_naranja" 
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/twitterbird5" />

        <ImageView
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="260dp"
            android:src="@drawable/buscar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="65dp"
            android:text="@string/detalle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageViewLeft"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="210dp"
            android:src="@drawable/arrow_left" />
    </RelativeLayout>
    
	<ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="15dp">
        
	    <LinearLayout
	        android:id="@+id/linearLayoutContenidoPadre"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
        
	    <LinearLayout
	        android:id="@+id/linearLayoutContenido"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:background="@drawable/customborder">	        	        
        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/linearLayoutDM"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:background="@drawable/customborder"
	        android:layout_marginTop="35dp">
	        
	        <TextView
	            android:id="@+id/txtDM"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/mensajePrivado"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/editDM"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="textMultiLine"
	            android:singleLine="false" />
	        
	        <TextView
	            android:id="@+id/txtTotalLetras"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/totalLetras"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <LinearLayout
	            android:id="@+id/linearLayout2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" 
	            android:layout_marginTop="25dp"
	            android:gravity="center_vertical|center_horizontal">
	
		        <Button
		            android:drawableLeft="@drawable/enviar_blanca"
		            android:id="@+id/btnEnviarMensaje"
		            android:layout_width="120dp"
		            android:layout_height="40dp"
		            android:text="@string/enviar"
		            android:textColor="#FFFFFF" 
		            android:background="@drawable/borderbutton"/>

        	</LinearLayout>
	        
	    </LinearLayout>
	    
	    </LinearLayout>
        
	</ScrollView>
</LinearLayout>